--- a/src/styles.css
+++ b/src/styles.css
@@ -11,19 +11,19 @@
 
 .swiper-button-prev,
 .swiper-button-next {
-  width: 5%;
-  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .swiper-button-prev {
-  left: 0;
+  left: 0 !important;
 }
 
 .swiper-button-next {
-  right: 0;
+  right: 0 !important;
 }
 
 .swiper-button-prev::after,
 .swiper-button-next::after {
   color: white;
+  font-size: 1rem !important;
 }
