--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,19 @@
   --swiper-pagination-bullet-inactive-color: white;
 }
 
+.swiper__pagination {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.swiper-pagination {
+  position: static !important;
+}
+
 .slide__pagination {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
 }
 
 .swiper-button-prev,
@@ -26,4 +34,8 @@
 .swiper-button-next::after {
   color: white;
   font-size: 1rem !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #3843cd !important;
 }
